fixed issue where the navigation was jumping after .js was applied

--- a/styles/blocks/_navigation.scss
+++ b/styles/blocks/_navigation.scss
@@ -297,8 +297,5 @@ $active-nav-indent: 54px;
             display: inline-block;
         }
     }
-	.navigation li.ui-menu-item{
-		margin: 0;
-	}
 	
 }
